# pasch

./: .gitignore  README.md  pyproject.toml
pasch/: __init__.py  cmd.py  orchestrator.py  util.py
pasch/file/: __init__.py  binary.py  file.py  git.py  json.py  text.py  toml.py
pasch/modules/: __init__.py  echo.py  files.py  fish.py  pacman.py  vscode.py
scripts/: check
